force-app/main/default/objects/Contact/fields/Has_Opted_Out_Of_SMS__c.field-meta.xml
<CustomField>
    <fullName>Has_Opted_Out_Of_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify contacts who do not want to be contacted by SMS, unchecked by default.</description>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>