force-app/main/default/objects/Contact/fields/Hearing_Condition_Status__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Condition_Status__c</fullName>
    <label>Hearing Condition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Status</valueSetName>
    </valueSet>
</CustomField>