force-app/main/default/objects/Contact/fields/Height_MOU__c.field-meta.xml
<CustomField>
    <fullName>Height_MOU__c</fullName>
    <label>Height MOU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>