force-app/main/default/objects/Contact/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hobbies</valueSetName>
    </valueSet>
</CustomField>