force-app/main/default/objects/Contact/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>Used to specify the reason a contact is inactive.</description>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moving Abroad</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Supporter Request</fullName>
            </value>
            <value>
                <fullName>Data Service Gone Away</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Earning</fullName>
            </value>
            <value>
                <fullName>Entered By Mistake</fullName>
            </value>
            <value>
                <fullName>Lack of Feedback</fullName>
            </value>
            <value>
                <fullName>Left Education</fullName>
            </value>
            <value>
                <fullName>Mother Remarried</fullName>
            </value>
            <value>
                <fullName>Moved Away</fullName>
            </value>
            <value>
                <fullName>Supported from Other Sources</fullName>
            </value>
            <value>
                <fullName>Field Office No Longer Works in Region</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Over Age</fullName>
            </value>
            <value>
                <fullName>System Transfer</fullName>
            </value>
            <value>
                <fullName>Died</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>