force-app/main/default/objects/Contact/fields/Induction__c.field-meta.xml
<CustomField>
    <fullName>Induction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Induction of volunteer</description>
    <inlineHelpText>Induction provided</inlineHelpText>
    <label>Induction</label>
    <type>Checkbox</type>
</CustomField>