force-app/main/default/objects/Contact/fields/Induction_Date__c.field-meta.xml
<CustomField>
    <fullName>Induction_Date__c</fullName>
    <description>Date of Induction of volunteer</description>
    <label>Induction Date</label>
    <type>Date</type>
</CustomField>