force-app/main/default/objects/Contact/fields/Induction_Status__c.field-meta.xml
<CustomField>
    <fullName>Induction_Status__c</fullName>
    <description>Volunteer induction status</description>
    <label>Induction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>