force-app/main/default/objects/Contact/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies if contact is active, it is defaulted to active is true/checked.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>