force-app/main/default/objects/Contact/fields/Is_AR_Donor__c.field-meta.xml
<CustomField>
    <fullName>Is_AR_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AR Donor</label>
    <type>Checkbox</type>
</CustomField>