force-app/main/default/objects/Contact/fields/Is_ES_Donor__c.field-meta.xml
<CustomField>
    <fullName>Is_ES_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ES Donor</label>
    <type>Checkbox</type>
</CustomField>