force-app/main/default/objects/Contact/fields/Is_IE_Donor__c.field-meta.xml
<CustomField>
    <fullName>Is_IE_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IE Donor</label>
    <type>Checkbox</type>
</CustomField>