force-app/main/default/objects/Contact/fields/Is_Receipt_Via_Post__c.field-meta.xml
<CustomField>
    <fullName>Is_Receipt_Via_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used for Contacts who prefer receiving receipts vai posts instead of emails.</description>
    <inlineHelpText>Check this if contact asks for receipts only via post.</inlineHelpText>
    <label>Receipt Via Post</label>
    <type>Checkbox</type>
</CustomField>