force-app/main/default/objects/Contact/fields/Is_System_Supporter__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Supporter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines a user used for System purposes, like the anonymous contact, the orphan pool sponsor, the importer of automated web imports, etc...</description>
    <label>Is System Supporter</label>
    <type>Checkbox</type>
</CustomField>