force-app/main/default/objects/Contact/fields/IsMobile__c.field-meta.xml
<CustomField>
    <fullName>IsMobile__c</fullName>
    <formula>OR ( BEGINS ( HomePhone , &quot;07&quot;),
     BEGINS ( HomePhone , &quot;7&quot;),
     BEGINS ( HomePhone , &quot;447&quot;),
     BEGINS ( HomePhone , &quot;00447&quot;)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMobile</label>
    <type>Checkbox</type>
</CustomField>