force-app/main/default/objects/Contact/fields/Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken__c</fullName>
    <label>Languages Spoken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages_Spoken</valueSetName>
    </valueSet>
</CustomField>