force-app/main/default/objects/Contact/fields/Last_Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_DateTime__c</fullName>
    <description>last Outbound call dateTime</description>
    <label>Last Call DateTime</label>
    <type>DateTime</type>
</CustomField>