force-app/main/default/objects/Contact/fields/Last_Gift_Amount_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Amount_Recurring__c</fullName>
    <inlineHelpText>The amount of the most recent won Opportunity by Close Date and donation type Recurring which are related to this Contact by primary Opportunity Contact Role</inlineHelpText>
    <label>Last Gift Amount (Recurring)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>