force-app/main/default/objects/Contact/fields/Last_Gift_Date_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date_Recurring__c</fullName>
    <label>Last Donation Date(Recurring)</label>
    <type>Date</type>
</CustomField>