force-app/main/default/objects/Contact/fields/LatestContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>LatestContentVersionId__c</fullName>
    <label>LatestContentVersionId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>