force-app/main/default/objects/Contact/fields/Mailchimp_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Opt_In_Date__c</fullName>
    <description>Populated based on the value in the Mailchimp System</description>
    <label>Mailchimp Opt In Date</label>
    <type>DateTime</type>
</CustomField>