force-app/main/default/objects/Contact/fields/Mailchimp_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Opt_Out_Date__c</fullName>
    <inlineHelpText>Populated based on the value in the Mailchimp System</inlineHelpText>
    <label>Mailchimp Opt Out Date</label>
    <type>DateTime</type>
</CustomField>