force-app/main/default/objects/Contact/fields/Mandatory_Learning__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Learning__c</fullName>
    <description>Details of training given</description>
    <inlineHelpText>Details of training given</inlineHelpText>
    <label>Mandatory Learning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>