force-app/main/default/objects/Contact/fields/MC_Sub_Date__c.field-meta.xml
<CustomField>
    <fullName>MC_Sub_Date__c</fullName>
    <label>MC Sub Date</label>
    <type>Date</type>
</CustomField>