force-app/main/default/objects/Contact/fields/MC_Unsub_Date__c.field-meta.xml
<CustomField>
    <fullName>MC_Unsub_Date__c</fullName>
    <label>MC Unsub Date</label>
    <type>Date</type>
</CustomField>