force-app/main/default/objects/Contact/fields/Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Medical_Condition__c</fullName>
    <description>Medical condition of a contact/volunteer (this field is only for Volunteer app)</description>
    <label>Medical Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>