force-app/main/default/objects/Contact/fields/National_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Identification_Number__c</fullName>
    <description>Used for regions where providing a national ID key to store on contacts is convention, like Spain.</description>
    <label>National ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>