force-app/main/default/objects/Contact/fields/Next_Thomson_Reuter_Check__c.field-meta.xml
<CustomField>
    <fullName>Next_Thomson_Reuter_Check__c</fullName>
    <description>Calculate next Thomson Reuter&apos;s Reference Check field</description>
    <formula>DATE(YEAR( Thomson_Reuter_Check__c )+1, MONTH(Thomson_Reuter_Check__c), DAY(Thomson_Reuter_Check__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Thomson Reuter Check</label>
    <type>Date</type>
</CustomField>