force-app/main/default/objects/Contact/fields/No_Donation_Deductions__c.field-meta.xml
<CustomField>
    <fullName>No_Donation_Deductions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DMS Field</description>
    <label>No Donation Deductions</label>
    <type>Checkbox</type>
</CustomField>