force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Open text area for generic notes.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>