force-app/main/default/objects/Contact/fields/npe01__HomeEmail__c.field-meta.xml
<CustomField>
    <fullName>npe01__HomeEmail__c</fullName>
    <description>See Preferred Email field.</description>
    <inlineHelpText>Removed from all Contact page layouts and FLS 27/01/2021 because not required as part of the any solution</inlineHelpText>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>