force-app/main/default/objects/Contact/fields/npsp__Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Address_Verification_Status__c</fullName>
    <description>The verification status of the current Address. If this Address requires verification, navigate to the current Address record and select Verify Address.  Consult the Power of Us Hub documentation for more information on Address Verification..</description>
    <formula>npsp__Current_Address__r.npsp__Verification_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this address requires verification, click the Verify Address button at the top of the Address page. Consult the Help documentation in the Power of Us Hub for more information.</inlineHelpText>
    <label>Address Verification Status</label>
    <type>Text</type>
</CustomField>