force-app/main/default/objects/Contact/fields/npsp__Exclude_from_Household_Informal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</description>
    <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
    <label>Exclude from Household Informal Greeting</label>
    <type>Checkbox</type>
</CustomField>