force-app/main/default/objects/Contact/fields/npsp__Exclude_from_Household_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Exclude_from_Household_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</description>
    <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
    <label>Exclude from Household Name</label>
    <type>Checkbox</type>
</CustomField>