force-app/main/default/objects/Contact/fields/npsp__HHId__c.field-meta.xml
<CustomField>
    <fullName>npsp__HHId__c</fullName>
    <description>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</description>
    <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
    <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
    <label>HHId</label>
    <type>Text</type>
</CustomField>