force-app/main/default/objects/Contact/fields/npsp__Last_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
    <description>The amount of this Contact&apos;s most recent soft credit.</description>
    <inlineHelpText>The amount of the most recent soft credit.</inlineHelpText>
    <label>Last Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>