force-app/main/default/objects/Contact/fields/npsp__Number_of_Soft_Credits_Two_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
    <description>The number of soft credits attributed to this Contact two calendar years ago.</description>
    <inlineHelpText>The number of soft credits 2 years ago.</inlineHelpText>
    <label>Number of Soft Credits Two Years Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>