force-app/main/default/objects/Contact/fields/npsp__Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>npsp__Primary_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</description>
    <inlineHelpText>Used to track the account of the contact&apos;s Organization Affiliation record that is marked primary.</inlineHelpText>
    <label>Primary Affiliation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
    <relationshipName>PrimaryAffiliatedContacts</relationshipName>
    <type>Lookup</type>
</CustomField>