force-app/main/default/objects/Contact/fields/Number_Not_In_Service__c.field-meta.xml
<CustomField>
    <fullName>Number_Not_In_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Number Not In Service</label>
    <type>Checkbox</type>
</CustomField>