force-app/main/default/objects/Contact/fields/Number_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Open Cases of a Contact/Donor</description>
    <label>Number of Open Complaints</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>