force-app/main/default/objects/Contact/fields/Number_of_Pledges__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pledges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Pledges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>