force-app/main/default/objects/Contact/fields/Oprhan_Guardian_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Oprhan_Guardian_Last_Name__c</fullName>
    <label>Guardian Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>