force-app/main/default/objects/Contact/fields/Orphan_Accommodation_Standard__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Accommodation_Standard__c</fullName>
    <label>Accommodation Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>