force-app/main/default/objects/Contact/fields/Orphan_Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Accommodation_Type__c</fullName>
    <label>Accommodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat (Owned)</fullName>
            </value>
            <value>
                <fullName>Flat (Rented)</fullName>
            </value>
            <value>
                <fullName>House (Rented)</fullName>
            </value>
            <value>
                <fullName>House (Owned)</fullName>
            </value>
            <value>
                <fullName>Orphanage</fullName>
            </value>
            <value>
                <fullName>Refugee Camp</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>With Relatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>