force-app/main/default/objects/Contact/fields/Orphan_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>