force-app/main/default/objects/Contact/fields/Orphan_ClassSize__c.field-meta.xml
<CustomField>
    <fullName>Orphan_ClassSize__c</fullName>
    <label>Class Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>