force-app/main/default/objects/Contact/fields/Orphan_ClassYear__c.field-meta.xml
<CustomField>
    <fullName>Orphan_ClassYear__c</fullName>
    <label>Class Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>