force-app/main/default/objects/Contact/fields/Orphan_Concat_Duplicate_ID__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Concat_Duplicate_ID__c</fullName>
    <description>For Matching Criteria</description>
    <inlineHelpText>For Matching Criteria</inlineHelpText>
    <label>Orphan Concat Duplicate ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>