force-app/main/default/objects/Contact/fields/Orphan_Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Detail_URL__c</fullName>
    <label>Orphan Detail URL</label>
    <type>Url</type>
</CustomField>